--- a/simpledb/test/.gitignore
+++ b/simpledb/test/.gitignore
@@ -1,1 +1,7 @@
 /BufferTest.class
+/BufferTest6.class
+/BufferTest5.class
+/BufferTest4.class
+/BufferTest3.class
+/BufferTest2.class
+/BufferTest1.class
